[gd_scene load_steps=5 format=3 uid="uid://dldwkuqwfxyqu"]

[ext_resource type="PackedScene" uid="uid://c7p06tvojqkq0" path="res://scenes/Minigames/Logik_Gatter_level_introduction.tscn" id="1_2iq3a"]
[ext_resource type="Script" uid="uid://14eprveqxfeg" path="res://scripts/minigame_introduction.gd" id="1_ooyhf"]
[ext_resource type="Texture2D" uid="uid://cn421n1s4xu8x" path="res://assets/orange1.png" id="2_en5oq"]
[ext_resource type="Texture2D" uid="uid://crj8s6h8bbatp" path="res://assets/arrows.png" id="3_ooyhf"]

[node name="MinigameIntroduction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ooyhf")

[node name="LogikGatterLevelIntroduction" parent="." instance=ExtResource("1_2iq3a")]
layout_mode = 1

[node name="explanation_start" type="Label" parent="."]
layout_mode = 0
offset_left = 289.0
offset_top = 51.0
offset_right = 448.0
offset_bottom = 74.0
text = "Start von Signal"

[node name="highlight_start_button" type="TextureRect" parent="explanation_start"]
z_index = -1
layout_mode = 0
offset_left = -147.0
offset_top = 56.0
offset_right = -45.0
offset_bottom = 96.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="highlight_label" type="TextureRect" parent="explanation_start"]
z_index = -1
layout_mode = 0
offset_left = -8.0
offset_top = -4.0
offset_right = 127.0
offset_bottom = 36.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="explanation_connection" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 289.0
offset_top = 51.0
offset_right = 555.0
offset_bottom = 74.0
text = "Verbindungen, leiten Signal weiter"

[node name="highlight_connection" type="TextureRect" parent="explanation_connection"]
z_index = -1
layout_mode = 0
offset_left = -120.0
offset_top = 86.0
offset_right = -74.0
offset_bottom = 213.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="highlight_label" type="TextureRect" parent="explanation_connection"]
z_index = -1
layout_mode = 0
offset_left = -8.0
offset_top = -4.0
offset_right = 113.0
offset_bottom = 36.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="explanation_try_start" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 289.0
offset_top = 51.0
offset_right = 448.0
offset_bottom = 74.0

[node name="arrow" type="TextureRect" parent="explanation_try_start"]
z_index = -1
layout_mode = 0
offset_left = -45.0
offset_top = 38.0
offset_right = 90.0
offset_bottom = 105.0
texture = ExtResource("3_ooyhf")
expand_mode = 1
flip_h = true

[node name="explanation_try_start2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 289.0
offset_top = 51.0
offset_right = 448.0
offset_bottom = 74.0

[node name="arrow" type="TextureRect" parent="explanation_try_start2"]
z_index = -1
layout_mode = 0
offset_left = -69.0
offset_top = 356.0
offset_right = 66.0
offset_bottom = 423.0
texture = ExtResource("3_ooyhf")
expand_mode = 1
flip_h = true

[node name="explanation_Gatter" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 278.0
offset_top = 161.0
offset_right = 544.0
offset_bottom = 184.0
text = "Gatter, Verbinden zwei Signale"

[node name="highlight_connection" type="TextureRect" parent="explanation_Gatter"]
z_index = -1
layout_mode = 0
offset_left = -123.0
offset_top = 98.0
offset_right = -57.0
offset_bottom = 145.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="highlight_label" type="TextureRect" parent="explanation_Gatter"]
z_index = -1
layout_mode = 0
offset_left = -7.0
offset_top = -6.0
offset_right = 247.0
offset_bottom = 31.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="explanation_Ziel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 268.0
offset_top = 460.0
offset_right = 427.0
offset_bottom = 483.0
text = "Ziel vom Signal "

[node name="highlight_Ziel" type="TextureRect" parent="explanation_Ziel"]
z_index = -1
layout_mode = 0
offset_left = 180.0
offset_top = -79.0
offset_right = 438.0
offset_bottom = 138.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="highlight_label" type="TextureRect" parent="explanation_Ziel"]
z_index = -1
layout_mode = 0
offset_left = -1.0
offset_top = -4.0
offset_right = 120.0
offset_bottom = 36.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="explanation_end" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 326.0
offset_top = 78.0
offset_right = 802.0
offset_bottom = 101.0
text = "Probier dich mit den SIgnalen aus bist du sie verstanden hast "

[node name="highlight_label" type="TextureRect" parent="explanation_end"]
z_index = -1
layout_mode = 0
offset_left = -7.0
offset_top = -6.0
offset_right = 474.0
offset_bottom = 34.0
texture = ExtResource("2_en5oq")
expand_mode = 1

[node name="next_button" type="Button" parent="."]
layout_mode = 0
offset_left = 820.0
offset_top = 519.0
offset_right = 967.0
offset_bottom = 578.0
theme_override_font_sizes/font_size = 30
text = "weiter"

[node name="back_button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 220.0
offset_top = 515.0
offset_right = 367.0
offset_bottom = 574.0
theme_override_font_sizes/font_size = 30
text = "zur√ºck"

[connection signal="start_1" from="LogikGatterLevelIntroduction" to="." method="_on_logik_gatter_level_introduction_start_1"]
[connection signal="start_2" from="LogikGatterLevelIntroduction" to="." method="_on_logik_gatter_level_introduction_start_2"]
[connection signal="pressed" from="next_button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
